# audiomerge

./: .gitignore  Cargo.toml  PRD.md  README.md
crates/audiomerge-cli/: Cargo.toml
crates/audiomerge-cli/src/: main.rs
crates/audiomerge-cli/tests/: cli_smoke.rs
crates/audiomerge-core/: Cargo.toml
crates/audiomerge-core/src/: crossfade.rs  decode.rs  encode.rs  error.rs  lib.rs  normalize.rs  pipeline.rs  probe.rs  resample.rs  testutil.rs  types.rs
crates/audiomerge-core/tests/: file_roundtrip.rs  full_pipeline.rs  property_tests.rs
